web_sg.tf
resource "aws_security_group" "astrosg" {
  vpc_id = "${aws_vpc.astrovpc.id}"
}
# Inbound Rules
  # HTTP access from anywhere 
ingress {
 from_port = 80
 to_port = 80
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0/0"]
}

# HTTPS access from anywhere

ingress {
 from_port = 443
 to_port = 443
 protocol = "tcp"
 cidr_blocks = ["0.0.0.0"]
}
# SSH access from anywhere
ingress {
from_port = 22
to_port = 22
protocol = "tcp"
cidr_block = ["0.0.0.0/0"]
}
# Outbound rules
# Internet access to anywhere
egress {
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}
tags = {
  Name = "Web SG"
}
}

# I have opened 80,443 & 22 ports for the inbound connection and I have opened all the ports for the outbound connection
